--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <meta name="author" content="Sergey Pimenov and Metro UI CSS contributors">
     <link rel='shortcut icon' type='image/x-icon' href='../favicon.ico' />
     <title>Alltech Sell - App Download</title>
-    <link href="/css/metro.css" rel="stylesheet">
-    <link href="/css/metro-icons.css" rel="stylesheet">
-    <link href="/css/metro-schemes.css" rel="stylesheet">
-    <link href="/css/metro-colors.css" rel="stylesheet">
-    <link href="/css/metro-responsive.css" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="57x57" href="/images/icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/images/Icon-hdpi-72x72.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/images/Icon-xxhdpi-144x144.png">
-    <link rel="icon" sizes="192x192" href="/images/Icon-xxxhdpi-192x192.png">
-    <script src="/js/jquery-2.1.3.min.js"></script>
+    <link href="./css/metro.css" rel="stylesheet">
+    <link href="./css/metro-icons.css" rel="stylesheet">
+    <link href="./css/metro-schemes.css" rel="stylesheet">
+    <link href="./css/metro-colors.css" rel="stylesheet">
+    <link href="./css/metro-responsive.css" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="57x57" href="./images/icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./images/Icon-hdpi-72x72.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="./images/Icon-xxhdpi-144x144.png">
+    <link rel="icon" sizes="192x192" href="./images/Icon-xxxhdpi-192x192.png">
+    <script src="./js/jquery-2.1.3.min.js"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script src="//ajax.aspnetcdn.com/ajax/mobileservices/MobileServices.Web-1.2.7.min.js"></script>     
     <!--<script src="//zumo.blob.core.windows.net/sdk/azure-mobile-apps-client.min.js"></script>  New client SDK does not use API Key, revert to old.-->
