Fix image paths

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 </head>
 <body class="bg-gray0">
     <div class="app-bar fixed-top darcula" data-role="appbar">
-        <a class="app-bar-element branding" href="Default.aspx"><img src="../images/a.png" alt="badge" /> Alltech Sell App </a>
+        <a class="app-bar-element branding" href="Default.aspx"><img src="./images/a.png" alt="badge" /> Alltech Sell App </a>
         <span class="app-bar-divider"></span>
     </div>
     <div class="page-content">
@@ -140,7 +140,7 @@
     </div>
     <div>
         <div style="text-align:center;">
-            <img src="/images/AlltechSellApp01_iPhone7Plus.png" alt="appTitleScreen"/><br/>
+            <img src="./images/AlltechSellApp01_iPhone7Plus.png" alt="appTitleScreen"/><br/>
             <button id="dlAppiOS" class="button primary large-button" onclick="metroDialog.open('#dlgDliOS')"><span class="mif-apple mif-2x"> iPhone</span></button><br/>
             <button id="dlAppAndroid" class="button primary large-button" onclick="metroDialog.open('#dlgDlAndroid')"><span class="mif-android mif-2x"> Android</span></button>
         </div>
